--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     </parent>
 
     <groupId>com.xwc</groupId>
-    <artifactId>ip-ribbon</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ribbon-support</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -75,5 +76,34 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <repositories>
+        <repository>
+            <id>my-maven</id>
+            <url>http://124.221.168.155:8081/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>my-maven-snapshots</id>
+            <url>http://124.221.168.155:8081/repository/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>my-maven-release</id>
+            <url>http://124.221.168.155:8081/repository/release/</url>
+        </repository>
+    </distributionManagement>
 
 </project>
